--- a/Setram/Setram_gabarit_hiver/main.css
+++ b/Setram/Setram_gabarit_hiver/main.css
@@ -44,6 +44,7 @@
 }
 #line_map_block {
     width: 100%;
+    height: 100%;
 }
 #header #header_route_sign {
     width: 64px;
@@ -64,6 +65,8 @@
 }
 .line_map_img {
     vertical-align: middle;
+    max-height: 100%;
+    max-width: 100%;
 }
 #layout-1-wrapper.layout-2-overload .information-text-blocks,
 #timetables-wrapper {
