--- a/Setram/Setram_gabarit_hiver/main.css
+++ b/Setram/Setram_gabarit_hiver/main.css
@@ -56,7 +56,8 @@
     border-color: black;
 }
 .header_route_sign_img {
-    height: 100%;
+    max-height: 100%;
+    max-width: 100%;
 }
 #map-wrapper {
     float: left;
@@ -117,6 +118,12 @@
     height: 20px;
     width: 100%;
 }
+/*right column, body area */
+
+#layout-1-wrapper .timegrid-body {
+    position: relative;
+    width: 100%;
+}
 #layout-1-wrapper .timegrid-body .hour-label {
     font-weight: bold;
     font-size: 11px;
@@ -133,11 +140,6 @@
 }
 #layout-1-wrapper .timegrid-column sup {
     font-size: 80%;
-}
-/*right column, body area */
-
-.timegrid-body {
-    position: relative;
 }
 #timetables-wrapper .timegrid-body .timetable-notes {
     position: absolute;
