--- a/Setram/Setram_gabarit_hiver/setram_gabarit_hiver.html.twig
+++ b/Setram/Setram_gabarit_hiver/setram_gabarit_hiver.html.twig
@@ -3,7 +3,7 @@
 {% block stylesheets %}
     {{ parent() }}
    <style>
-        #small-right-blocks #text_block_code{
+        #small-right-blocks #text_block_bottom_code_1{
            background: white url("{{ asset(imgPath ~ 'infos_timeo.png') }}") no-repeat left;
            background-size: 77px auto;
            background-position: 0px 28px;
@@ -33,9 +33,9 @@
 
         <div id="bottom-right-block" class="clearfix">
                 <div id="small-right-blocks">
-                    {{ macros.text('text_block_infos', attribute(timetable.blocks, 'text_block_infos'), 'route', 'small-block block') }}
-                    {{ macros.stop_point_pois('text_block_pdv', stopPoint, 'small-block', 'Points de vente') }}
-                    {{ macros.stop_point_code('text_block_code', stopPoint, 'small-block', 'Horaires en temps réel', 'timeo', 'Code de l\'arrêt :') }}
+                    {{ macros.text('text_block_bottom_infos_1', attribute(timetable.blocks, 'text_block_bottom_infos_1'), 'route', 'small-block block') }}
+                    {{ macros.stop_point_pois('text_block_bottom_pdv_1', stopPoint, 'small-block', 'Points de vente') }}
+                    {{ macros.stop_point_code('text_block_bottom_code_1', stopPoint, 'small-block', 'Horaires en temps réel', 'timeo', 'Code de l\'arrêt :') }}
                 </div>
                 <img class="setram-logo" src="{{ asset(imgPath ~ 'bandeau_logo_setram.png') }}">
         </div>
