--- a/Setram/Setram_gabarit_hiver/main.css
+++ b/Setram/Setram_gabarit_hiver/main.css
@@ -120,6 +120,10 @@
 }
 /*right column, body area */
 
+#timetables-block-wrapper {
+    max-height: 865px;
+     overflow: hidden;
+}
 #layout-1-wrapper .timegrid-body {
     position: relative;
     width: 100%;
