--- a/Setram/Setram_gabarit_ete_bus/main.css
+++ b/Setram/Setram_gabarit_ete_bus/main.css
@@ -27,7 +27,9 @@
 #header #stop-point-title-wrapper {
     padding-right: 10px;
     float: right;
-    max-width: 200px;
+    max-width: 230px;
+    min-width: 150px;
+    position: relative;
 }
 #header #stop-point-title-wrapper .title-header {
     float: right;
@@ -40,7 +42,11 @@
     font-size: 30px;
 }
 #header #stop-point-title-wrapper .title-content {
-    text-overflow: ellipsis;
+    position: absolute;
+    max-height: 40px;
+    bottom: 2px;
+    right: 8px;
+    overflow: hidden;
 }
 #line_map_block {
     width: 100%;
