--- a/Setram/Setram_gabarit_hiver/setram_gabarit_hiver.html.twig
+++ b/Setram/Setram_gabarit_hiver/setram_gabarit_hiver.html.twig
@@ -35,7 +35,7 @@
                 <div id="small-right-blocks">
                     {{ macros.text('text_block_bottom_infos_1', attribute(timetable.blocks, 'text_block_bottom_infos_1'), 'route', 'small-block block') }}
                     {{ macros.stop_point_pois('text_block_bottom_pdv_1', stopPoint, 'small-block', 'Points de vente') }}
-                    {{ macros.stop_point_code('text_block_bottom_code_1', stopPoint, 'small-block', 'Horaires en temps réel', 'timeo', 'Code de l\'arrêt :') }}
+                    {{ macros.stop_point_code('text_block_bottom_code_1', stopPoint, 'small-block', 'Horaires en temps réel', 'external_code', 'Code de l\'arrêt :') }}
                 </div>
                 <img class="setram-logo" src="{{ asset(imgPath ~ 'bandeau_logo_setram.png') }}">
         </div>
