--- a/Setram/Setram_gabarit_hiver/main.css
+++ b/Setram/Setram_gabarit_hiver/main.css
@@ -27,8 +27,8 @@
 #header #stop-point-title-wrapper {
     padding-right: 10px;
     float: right;
-    max-width: 230px;
-    min-width: 150px;
+    width: 180px;
+    text-align: right;
     position: relative;
 }
 #header #stop-point-title-wrapper .title-header {
