--- a/Setram/Setram_gabarit_ete_bus/base.html.twig
+++ b/Setram/Setram_gabarit_ete_bus/base.html.twig
@@ -32,6 +32,9 @@
                         {% if timetable.title is defined %}
                              {{ timetable.title }}
                         {% endif %}
+                        {% if stopPoint.city is defined %}
+                            <span>- {{ stopPoint.city }}</span>
+                        {% endif %}
                    </div>
                 </div>
                 <div id="stop-point-title-wrapper" data-block-level="stop_point" data-auto-filled="1">
