hiver header update

--- a/Setram/Setram_gabarit_ete_bus/base.html.twig
+++ b/Setram/Setram_gabarit_ete_bus/base.html.twig
@@ -38,6 +38,7 @@
                    </div>
                 </div>
                 <div id="stop-point-title-wrapper" data-block-level="stop_point" data-auto-filled="1">
+                    <span id="white-stripe"></span>
                     <div class="title-header clearfix">{{'stop_point.label'|trans({}, 'default')}} :</div>
                     <span class="clearfix"></span>
                     <div class="title-content">
