--- a/Setram/Setram_gabarit_ete_bus/main.css
+++ b/Setram/Setram_gabarit_ete_bus/main.css
@@ -115,6 +115,7 @@
     font-size: 14px;
     line-height: 20px;
     margin: auto;
+    margin-bottom:10px;
     padding: 2px 5px 0px 5px;
     height: 20px;
     width: 551px;
