wording-style-3-paves

--- a/Divia/Divia_3_paves/main.css
+++ b/Divia/Divia_3_paves/main.css
@@ -150,7 +150,7 @@ div#timegrid_block_4 {
 }
 .information-text-blocks .text-block-wrapper .title,
 #timetables-wrapper .timegrid-header{
-    background-color:#1a171b;
+    background-color:#707173;
     color:white;
     font-weight:bold;
     font-size:14px;
