wording-style-3-paves-proxi

--- a/Divia/Divia_3_paves_proxi/divia_3_paves_proxi.html.twig
+++ b/Divia/Divia_3_paves_proxi/divia_3_paves_proxi.html.twig
@@ -35,9 +35,9 @@
         {% endfor %}
         <div class="information-text-blocks timegrid-container">
             <div id="{{ id }}" class="centered-text-block text-block-wrapper">
-                <div class="title"></div>
+                <div class="title">Dimanche et jours fériés</div>
                 <div class="relative">
-                    <div class="content"><p>Cette ligne ne fonctionne pas les dimanche et jour férié.</p></div>
+                    <div class="content"><p>Cette ligne ne fonctionne pas les dimanche et jours fériés.</p></div>
                 </div>
             </div>
         </div>
