--- a/Divia/Divia_3_paves_proxi/divia_3_paves_proxi.html.twig
+++ b/Divia/Divia_3_paves_proxi/divia_3_paves_proxi.html.twig
@@ -26,7 +26,7 @@
                     <div class="additionnal-text-blocks dark-block">
                         <div id="" class="centered-text-block text-block-wrapper">
                             Période de vacances :<br/>
-                            20 octobre au 1er novembre - 22 décembre au 3 janvier - 23 février au 7 mars - 27 avril au 9 mai
+                            19 au 31 octobre - 21 décembre au 2 janvier - 15 au 27 février - 11 au 23 avril
                         </div>
                     </div>
                 </div>
