--- a/Divia/Divia_3_paves/base.html.twig
+++ b/Divia/Divia_3_paves/base.html.twig
@@ -17,14 +17,14 @@
     {% endstylesheets %}
 {% endblock %}
 
-{% block timetable_content %}
+{% block stop_timetable_content %}
     <div id="layout-1-wrapper" class="{% block additionnal_wrapper_class %}{% endblock %}">
         <div class="layout-container">
             <div id="header" class="clearfix">
-                {{ macros.img('header_route_sign', attribute(timetable.blocks, 'header_route_sign'), 'header_route_sign_img', 'route') }}
+                {{ macros.img('header_route_sign', attribute(stopTimetable.blocks, 'header_route_sign'), 'header_route_sign_img', 'route') }}
                 <div id="direction-title-wrapper" data-block-level="route" data-auto-filled="1">
-                    {% if timetable.title is defined %}
-                        {{ 'global.direction'|trans }} {{ timetable.title }}
+                    {% if stopTimetable.title is defined %}
+                        {{ 'global.direction'|trans }} {{ stopTimetable.title }}
                     {% endif %}
                 </div>
                 <div id="stop-point-title-wrapper" data-block-level="stop_point" data-auto-filled="1">
@@ -38,17 +38,17 @@
             </div>
             <div id="map-wrapper" class="clearfix">
                 <div id="large-left-blocks">
-                    {{ macros.img('line_map_block', attribute(timetable.blocks, 'line_map_block'), 'block line_map_img', 'route') }}
+                    {{ macros.img('line_map_block', attribute(stopTimetable.blocks, 'line_map_block'), 'block line_map_img', 'route') }}
                     {{ macros.flash_info('flash_info_block', imgPath ~ 'flash_info.png') }}
                 </div>
                 <div id="small-right-blocks">
-                    {{ macros.text('text_block_1', attribute(timetable.blocks, 'text_block_1'), 'route', 'small-block block') }}
+                    {{ macros.text('text_block_1', attribute(stopTimetable.blocks, 'text_block_1'), 'route', 'small-block block') }}
                     {{ macros.description('small-block') }}
                     {{ macros.stop_point_pois('text_block_3', stopPoint, 'small-block', 'Points de vente - Relais Divia') }}
                     {{ macros.stop_point_code('text_block_4', stopPoint, 'small-block', 'Code TOTEM de cet arrêt') }}
                 </div>
             </div>
-            {% block timetable_downer_content %}{% endblock %}
+            {% block stop_timetable_downer_content %}{% endblock %}
         </div>
     </div>
 
@@ -62,7 +62,7 @@
             'stopPointLevel'    : stopPointLevel,
             'externalNetworkId' : externalNetworkId,
             'blockTypes'        : blockTypes,
-            'timetable'         : timetable,
+            'stopTimetable'     : stopTimetable,
             'stopPoint'         : stopPoint,
             'selector'          : '#layout-1-wrapper' }
     %}
