--- a/Divia/Divia_Flexo_1_pave/flexo.html.twig
+++ b/Divia/Divia_Flexo_1_pave/flexo.html.twig
@@ -2,14 +2,14 @@
 
 {% block additionnal_wrapper_class %}proxi-layout flexo-layout{% endblock %}
 
-{% block timetable_downer_content %}
+{% block stop_timetable_downer_content %}
     <div id="timetable_downer_content" class="clearfix">
         {% include templatePath ~ "leftOrangeBlock.html.twig"
         with { 'brand' : 'flexo' } only %}
         <div id="timetables-wrapper">
             {% set addNotes = false %}
             {% set id = 'timegrid_block_1' %}
-            {% set block = attribute(timetable.blocks, id) %}
+            {% set block = attribute(stopTimetable.blocks, id) %}
             {% include "CanalTPMttBundle:Layouts:timegrid.html.twig" with {'addNotes': addNotes, 'nbLines' : 4, additionnalClass: 'purple'} %}
             {% set calendar = attribute(calendars, block.content) %}
             <div class="pad10t">
