--- a/UnusedArchives/Flexo/flexo.html.twig
+++ b/UnusedArchives/Flexo/flexo.html.twig
@@ -2,7 +2,7 @@
 
 {% block additionnal_wrapper_class %}proxi-layout flexo-layout{% endblock %}
 
-{% block timetable_downer_content %}
+{% block stop_timetable_downer_content %}
     <div id="timetable_downer_content" class="clearfix">
         {%
             include templatePath ~ "leftOrangeBlock.html.twig"
@@ -11,7 +11,7 @@
         <div id="timetables-wrapper">
             {% set addNotes = false %}
             {% set id = 'timegrid_block_1' %}
-            {% set block = attribute(timetable.blocks, id) %}
+            {% set block = attribute(stopTimetable.blocks, id) %}
             {% set nbLines = 4 %}
             {% include "CanalTPMttBundle:Layouts:timegrid.html.twig" with {'addNotes': addNotes, 'nbLines' : nbLines} %}
             {% set calendar = attribute(calendars, block.content) %}
