change black block

--- a/Divia/Divia_3_paves_proxi/divia_3_paves_proxi.html.twig
+++ b/Divia/Divia_3_paves_proxi/divia_3_paves_proxi.html.twig
@@ -18,9 +18,9 @@
             {% if i == 2 %}
                 </div>
                 <div>
-                    <div class="additionnal-text-blocks green-block">
+                    <div class="additionnal-text-blocks black-block">
                         <div id="" class="centered-text-block text-block-wrapper">
-                            En période "Anis", les horaires de cette ligne ne changent pas.
+                            Pendant les vacances scolaires, se référer aux horaires indiqués dans le tableau horaires "Lundi à vendredi - Vacances scolaires"
                         </div>
                     </div>
                     <div class="additionnal-text-blocks dark-block">
