--- a/Divia/Divia_3_paves_proxi/main.css
+++ b/Divia/Divia_3_paves_proxi/main.css
@@ -254,7 +254,7 @@ img.divia-logo{
     background-color: #E7E7F3;
 }
 #layout-1-wrapper .text-block-wrapper .content{
-    background-color: #E7E7F3;
+    background-color: #e3e3e3;
     display:table;
     font-size:12px;
     font-weight:bold;
